# rust-warp-diesel-jwt-api

./: .env.sample  Cargo.toml  README.md
migrations/2022-06-09-102533_create_users/: up.sql
src/: auth.rs  db.rs  handlers.rs  lib.rs  login.rs  main.rs  models.rs  routes.rs  users.rs
