[package]
name = "warp_diesel_jwt_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.13"
diesel = { version = "1.4.8", features = ["postgres"] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0.137", features = ["derive"] }